<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSair"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_sair" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="120dp"
        android:text="@string/monitoramento"
        android:textSize="35dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSensorAlarme"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="50dp"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/purple_200"
        android:text="@string/alarme" />

    <Button
        android:id="@+id/btnSensorGas"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="350dp"
        android:layout_marginRight="50dp"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/teal_200"
        android:text="@string/gas" />

    <Button
        android:id="@+id/btnSensorCamera"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="450dp"
        android:layout_marginRight="50dp"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/teal_700"
        android:text="@string/camera" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/royal_blue"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation"/>




</RelativeLayout>